archio/ingressController/prod/ingressControllerFuncionando.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-hosts
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/proxy-body-size: "0"
#     nginx.ingress.kubernetes.io/proxy-read-timeout: "66600"
#     nginx.ingress.kubernetes.io/proxy-send-timeout: "66600"
# spec:
#   tls:
#   - hosts:
#     - "homolog-app.archio.com.br"  
#     secretName: "archio-app-secret-prod"
#   - hosts:
#     - "queuestestes.archio.com.br"  
#     secretName: "queues-secret-prod"
#   - hosts:
#     - "archiomaintestes.archio.com.br"  
#     secretName: "archiomain-secret-prod"  
#   - hosts:
#     - "exportarchivestestes.archio.com.br"  
#     secretName: "exportarchives-secret-prod"   
#   - hosts:
#     - "muploadtestes.archio.com.br"   
#     secretName: "mupload-secret-prod" 
#   - hosts:
#     - "uploadtestes.archio.com.br"   
#     secretName: "upload-secret-prod"     
#   - hosts:
#     - "smuploadtestes.archio.com.br"   
#     secretName: "smupload-secret-prod"     
#   rules:
#   - host: homolog-app.archio.com.br
#     http:
#       paths:
#         - pathType: "Prefix"
#           path: "/"
#           backend:
#             service:
#               name: archio-app
#               port:
#                 number: 80
#   - host: queuestestes.archio.com.br  
#     http:
#       paths:
#         - pathType: "Prefix"
#           path: "/"
#           backend:
#             service:
#               name: rabbitmq
#               port:
#                 number: 80
#   - host: archiomaintestes.archio.com.br  
#     http:
#       paths:
#         - pathType: "Prefix"
#           path: "/"
#           backend:
#             service:
#               name: archio-main
#               port:
#                 number: 80
#   - host: muploadtestes.archio.com.br
#     http:
#       paths:
#         - pathType: "Prefix"
#           path: "/"
#           backend:
#             service:
#               name: archio-upload
#               port:
#                 number: 80              
#   - host: uploadtestes.archio.com.br
#     http:
#       paths:
#         - pathType: "Prefix"
#           path: "/"
#           backend:
#             service:
#               name: archio-upload
#               port:
#                 number: 80                            
                          
#   - host: exportarchivestestes.archio.com.br  
#     http:
#       paths:
#         - pathType: "Prefix"
#           path: "/"
#           backend:
#             service:
#               name: export-archio
#               port:
#                 number: 80              
                            

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "66600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "66600"
spec:
  ingressClassName: "nginx"
  tls:
  # - hosts:
  #   - "homolog-app.archio.com.br"  
  #   secretName: "archio-app-secret-prod"
  - hosts:
    - "queuestestes.archio.com.br"  
    secretName: "queues-secret-prod"
  - hosts:
    - "archiomaintestes.archio.com.br"  
    secretName: "archiomain-secret-prod"  
  - hosts:
    - "exportarchivestestes.archio.com.br"  
    secretName: "exportarchives-secret-prod"   
  - hosts:
    - "muploadtestes.archio.com.br"   
    secretName: "mupload-secret-prod" 
  - hosts:
    - "uploadtestes.archio.com.br"   
    secretName: "upload-secret-prod"     
  - hosts:
    - "smuploadtestes.archio.com.br"   
    secretName: "smupload-secret-prod"     
  rules:
  - host: homolog-app.archio.com.br
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: archio-app
              port:
                number: 80
  - host: queuestestes.archio.com.br  
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: rabbitmq
              port:
                number: 80
  - host: archiomaintestes.archio.com.br  
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: archio-main
              port:
                number: 80
  - host: muploadtestes.archio.com.br
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: archio-upload
              port:
                number: 80              
  - host: uploadtestes.archio.com.br
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: archio-upload
              port:
                number: 80                            
                          
  - host: exportarchivestestes.archio.com.br  
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: export-archio
              port:
                number: 80
